fixed css issues

--- a/Views/Home/CustomArt.cshtml
+++ b/Views/Home/CustomArt.cshtml
@@ -2,7 +2,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-6 col-md-6 col-sm-12 col-12 login-section">
-                <img src="~/img/painting1profile.jpg" class="img-fluid" alt="" style="height:44rem;">
+                <img src="~/img/painting1profile.jpg" class="img-fluid" alt="" style="height:39rem;">
             </div>
             <div class="col-lg-6 col-md-12 col-sm-12 col-12 pt-5">
                 <div class="container pt-4 text-center">
@@ -12,10 +12,12 @@
                     </a>
                 </div>
                 <div class="container d-flex justify-content-center" style="width: fit-content;">
-                    <div class="row  ms-3 py-2">
-                        <div>
-                            <label for="name" class="form-label">Name</label>
-                            <input type="text" class="form-control" id="name">
+                    <div class="row py-2 ms-3">
+                        <div class="row py-2">
+                            <div>
+                                <label for="name" class="form-label">Name</label>
+                                <input type="text" class="form-control" id="name">
+                            </div>
                         </div>
                         <div class="row py-2">
                             <div>
