--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -195,12 +195,12 @@
       </div>
       <div class="row text-center">
         <div class="col-sm-12 col-md-4 col-lg-3 col-12">
-          <div class="card  shadow p-3 mb-5 bg-body rounded">
+          <div class="card  shadow p-1 mb-5 bg-body">
             <div class="card-body">
               <img src="~/img/artist1.jpg" class="rounded-circle border img-fluid" alt=""
                 style="height: 150px; width: 150px;">
-              <h5 class="card-title mt-4">Handmade Creations</h5>
-              <p class="card-text">Handmade Giftings | String Art | Acrylic Signage | Resin Art | Glass Frames |
+              <h5 class="card-title mt-2">Handmade Creations</h5>
+              <p class="card-text fs-6">Handmade Giftings | String Art | Acrylic Signage | Glass Frames |
                 Engagement Platter</p>
             </div>
             <div class="card-footer py-3 bg-body">
@@ -211,11 +211,11 @@
           </div>
         </div>
         <div class="col-sm-12 col-md-4 col-lg-3 col-12">
-          <div class="card shadow p-3 mb-5 bg-body rounded">
+          <div class="card shadow p-1 mb-5 bg-body">
             <div class="card-body">
               <img src="~/img/artist2.jpg" class="rounded-circle border img-fluid" alt=""
                 style="height: 150px; width: 150px;">
-              <h5 class="card-title mt-4">Craftiness</h5>
+              <h5 class="card-title mt-2">Craftiness</h5>
               <p class="card-text">Packaging Studio | Workshops | Glass Frames | Gifts | Favors | Graphics | Small
                 Event Design </p>
             </div>
@@ -227,12 +227,12 @@
           </div>
         </div>
         <div class="col-sm-12 col-md-4 col-lg-3 col-12">
-          <div class="card shadow p-3 mb-5 bg-body rounded">
+          <div class="card shadow p-1 mb-5 bg-body">
             <div class="card-body">
               <img src="~/img/artist3.jpg" class="rounded-circle border img-fluid" alt=""
                 style="height: 150px; width: 150px;">
-              <h5 class="card-title mt-4"> Craft World</h5>
-              <p class="card-text">Scrapbooks | Frames | Explosion boxes | Cake boxes | Hampers | Sketches | lamps
+              <h5 class="card-title mt-2"> Craft World</h5>
+              <p class="card-text">Scrapbook | Frame | Explosion boxes | Cake box | Hampers | Sketch | lamps
                 J&k based.</p>
             </div>
             <div class="card-footer py-3 bg-body">
@@ -243,11 +243,11 @@
           </div>
         </div>
         <div class="col-sm-12 col-md-4 col-lg-3 col-12">
-          <div class="card shadow p-3 mb-5 bg-body rounded">
+          <div class="card shadow p-1 mb-5 bg-body">
             <div class="card-body">
               <img src="~/img/new_artist.png" class="rounded-circle border img-fluid" alt=""
                 style="height: 150px; width: 150px;">
-              <h5 class="card-title mt-4">Add artist name</h5>
+              <h5 class="card-title mt-2">Add artist name</h5>
               <p class="card-text">About artist (Artists can insert information about their work or kind of art they do)
               </p>
             </div>
