--- a/Views/Home/Shopbyartist.cshtml
+++ b/Views/Home/Shopbyartist.cshtml
@@ -18,14 +18,14 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto  mb-2 mb-lg-0 ">
                 <li class="nav-item">
-                    <a class="nav-link font2 active mx-2 item-1 text-white bottom-yellow" aria-current="page"
+                    <a class="nav-link font2 mx-2 item-1 text-white " aria-current="page"
                        asp-area="" asp-controller="Home" asp-action="Index">HOME</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link font2 mx-2 item-2 text-white" asp-controller="home" asp-action="About">ABOUT</a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link font2  mx-2 item-3 text-white"
+                    <a class="nav-link font2  mx-2 item-3 text-white active bottom-purple"
                        id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                         SHOP
                     </a>
@@ -95,14 +95,13 @@
         </div>
         <div class="row text-center">
             <div class="col-sm-12 col-md-4 col-lg-3 col-12">
-                <div class="card  shadow p-3 mb-5 bg-body rounded">
+                <div class="card  shadow p-1 mb-5 bg-body">
                     <div class="card-body">
                         <img src="~/img/artist1.jpg" class="rounded-circle border img-fluid" alt=""
                              style="height: 150px; width: 150px;">
-                        <h5 class="card-title mt-4">Handmade Creations</h5>
-                        <p class="card-text">
-                            Handmade Giftings | String Art | Acrylic Signage | Resin Art | Glass
-                            Frames |
+                        <h5 class="card-title mt-2">Handmade Creations</h5>
+                        <p class="card-text fs-6">
+                            Handmade Giftings | String Art | Acrylic Signage | Glass Frames |
                             Engagement Platter
                         </p>
                     </div>
@@ -115,49 +114,46 @@
                 </div>
             </div>
             <div class="col-sm-12 col-md-4 col-lg-3 col-12">
-                <div class="card shadow p-3 mb-5 bg-body rounded">
+                <div class="card shadow p-1 mb-5 bg-body">
                     <div class="card-body">
                         <img src="~/img/artist2.jpg" class="rounded-circle border img-fluid" alt=""
                              style="height: 150px; width: 150px;">
-                        <h5 class="card-title mt-4">Craftiness </h5>
+                        <h5 class="card-title mt-2">Craftiness</h5>
                         <p class="card-text">
-                            Packaging Studio | Workshops | Glass Frames | Gifts | Favors |
-                            Graphics | Small
+                            Packaging Studio | Workshops | Glass Frames | Gifts | Favors | Graphics | Small
                             Event Design
                         </p>
                     </div>
                     <div class="card-footer py-3 bg-body">
-                        <a class="bg-pink-orange text-white px-3 py-2 my-3 mx-2 rounded text-decoration-none font2">
+                        <a href="Artist2.html"
+                           class="bg-pink-orange text-white px-3 py-2 my-3 mx-2 rounded text-decoration-none font2">
                             <i class="fas fa-user"></i> View profile
                         </a>
                     </div>
                 </div>
             </div>
-            <div class="col-sm-12 col-md-4 col-lg-3 col-12">
-                <div class="card shadow p-3 mb-5 bg-body rounded">
-                    <div class="card-body">
-                        <img src="~/img/artist3.jpg" class="rounded-circle border img-fluid" alt=""
-                             style="height: 150px; width: 150px;">
-                        <h5 class="card-title mt-4"> Craft World</h5>
-                        <p class="card-text">
-                            Scrapbooks | Frames | Explosion boxes | Cake boxes | Hampers | Sketches
-                            | lamps
-                            J&k based.
-                        </p>
-                    </div>
-                    <div class="card-footer py-3 bg-body">
-                        <a class="bg-pink-orange text-white px-3 py-2 my-3 mx-2 rounded text-decoration-none font2">
-                            <i class="fas fa-user"></i> View profile
-                        </a>
-                    </div>
-                </div>
+             <div class="col-sm-12 col-md-4 col-lg-3 col-12">
+          <div class="card shadow p-1 mb-5 bg-body">
+            <div class="card-body">
+              <img src="~/img/artist3.jpg" class="rounded-circle border img-fluid" alt=""
+                style="height: 150px; width: 150px;">
+              <h5 class="card-title mt-2"> Craft World</h5>
+              <p class="card-text">Scrapbook | Frame | Explosion boxes | Cake box | Hampers | Sketch | lamps
+                J&k based.</p>
             </div>
+            <div class="card-footer py-3 bg-body">
+              <a href="Artist3.html"
+                class="bg-pink-orange text-white px-3 py-2 my-3 mx-2 rounded text-decoration-none font2"><i
+                  class="fas fa-user"></i> View profile</a>
+            </div>
+          </div>
+        </div>
             <div class="col-sm-12 col-md-4 col-lg-3 col-12">
-                <div class="card shadow p-3 mb-5 bg-body rounded">
+                <div class="card shadow p-1 mb-5 bg-body">
                     <div class="card-body">
                         <img src="~/img/artist4.jpg" class="rounded-circle border img-fluid" alt=""
                              style="height: 150px; width: 150px;">
-                        <h5 class="card-title mt-4">Craft_n_creations</h5>
+                        <h5 class="card-title mt-2">Craft_n_creations</h5>
                         <p class="card-text">
                             Your Ideas & our creativity makes the perfect gift for your loved one's
                         </p>
@@ -169,6 +165,7 @@
                     </div>
                 </div>
             </div>
+
         </div>
     </div>
 </section>
