--- a/Views/Home/CustomArt.cshtml
+++ b/Views/Home/CustomArt.cshtml
@@ -1,12 +1,12 @@
-﻿<section>
-    <div class="container-fluid">
-        <div class="row">
+﻿
+    <section class="container-fluid">
+       <div class="row">
             <div class="col-lg-6 col-md-6 col-sm-12 col-12 login-section">
-                <img src="~/img/painting1profile.jpg" class="img-fluid" alt="" style="height:39rem;">
+                <img src="~/img/painting1profile.jpg" class="img-fluid" alt="" style="height:40.5rem;">
             </div>
             <div class="col-lg-6 col-md-12 col-sm-12 col-12 pt-5">
                 <div class="container pt-4 text-center">
-                    <a class="navbar-brand font1 text-dark fw-bold fs-1 heading" href="#">
+                    <a asp-controller="home" asp-action="index" class="navbar-brand font1 text-dark fw-bold fs-1 heading">
                         <img src="~/img/logo.png"
                              class="me-3 mb-2" style="width: 3rem; height: 3rem;" alt="">Request For Custom Art
                     </a>
@@ -47,5 +47,5 @@
                 </div>
             </div>
         </div>
-    </div>
-</section>
+    </section>
+
