--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -4,54 +4,54 @@
 @{
     ViewData["Title"] = "Log in";
 }
-
-<h1>@ViewData["Title"]</h1>
-<div class="row">
-    <div class="col-md-4">
-        <section>
-            <form id="account" method="post">
-                <h2>Use a local account to log in.</h2>
-                <hr />
-                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                <div class="form-floating">
-                    <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" />
-                    <label asp-for="Input.Email" class="form-label"></label>
-                    <span asp-validation-for="Input.Email" class="text-danger"></span>
+<section>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-lg-6 col-md-6 col-sm-12 col-12 login-section ">
+                <img src="~/img/painting1profile.jpg" class="img-fluid" alt="" style="height:44rem;">
+            </div>
+            <div class="col-lg-6 col-md-12 col-sm-12 col-12 mt-5 pt-5">
+                <div class="container pt-4 text-center">
+                    <a  asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand font1 text-dark fw-bold fs-1 heading">
+                        <img  src="~/img/logo.png"
+                             style="width: 3rem; height: 3rem;" alt=""> Store To Door
+                    </a>
                 </div>
-                <div class="form-floating">
-                    <input asp-for="Input.Password" class="form-control" autocomplete="current-password" aria-required="true" />
-                    <label asp-for="Input.Password" class="form-label"></label>
-                    <span asp-validation-for="Input.Password" class="text-danger"></span>
-                </div>
-                <div>
-                    <div class="checkbox">
-                        <label asp-for="Input.RememberMe" class="form-label">
-                            <input class="form-check-input" asp-for="Input.RememberMe" />
-                            @Html.DisplayNameFor(m => m.Input.RememberMe)
-                        </label>
+                <div class="container" style="width: 65%;">
+                    <div class="p-4 pb-1 text-center">
+                        <span class="me-5 pe-5 fs-5 font2">Log in</span>
+                        <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl" class="text-decoration-none ms-5 ps-1"> Create an account</a>
                     </div>
+                    <form id="account" method="post">
+                        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                        <div class="form-floating my-3">
+                            <input asp-for="Input.Email" autocomplete="username" type="email" class="form-control"
+                                   id="floatingInput" aria-required="true" placeholder="name@example.com">
+                            <label asp-for="Input.Email" for="floatingInput">Email address</label>
+                            <span asp-validation-for="Input.Email" class="text-danger"></span>
+                        </div>
+                        <div class="form-floating my-3">
+                            <input type="password" asp-for="Input.Password" autocomplete="current-password" aria-required="true" class="form-control" id="floatingPassword"
+                                   placeholder="Password">
+                            <label asp-for="Input.Password" for="floatingPassword">Password</label>
+                            <span asp-validation-for="Input.Password" class="text-danger"></span>
+                        </div>
+                        <div class="checkbox">
+                            <label asp-for="Input.RememberMe" class="form-label">
+                                <input class="form-check-input" asp-for="Input.RememberMe" />
+                                @Html.DisplayNameFor(m => m.Input.RememberMe)
+                            </label>
+                            <a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
+                        </div>
+                        <div class="d-grid gap-2 col-6 ms-auto me-auto pt-4">
+                            <button id="login-submit" type="submit" class="btn btn-primary rounded-pill shadow-none btn-primary">Log in</button>
+                        </div>
+                    </form>
                 </div>
-                <div>
-                    <button id="login-submit" type="submit" class="w-100 btn btn-lg btn-primary">Log in</button>
-                </div>
-                <div>
-                    <p>
-                        <a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
-                    </p>
-                    <p>
-                        <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
-                    </p>
-                    <p>
-                        <a id="resend-confirmation" asp-page="./ResendEmailConfirmation">Resend email confirmation</a>
-                    </p>
-                </div>
-            </form>
-        </section>
+            </div>
+        </div>
     </div>
-   
-</div> -->
-
-
+</section>
 @section Scripts {
-    <partial name="_ValidationScriptsPartial" />
+<partial name="_ValidationScriptsPartial" />
 }
