--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -4,75 +4,83 @@
     ViewData["Title"] = "Register";
 }
 
-<h1>@ViewData["Title"]</h1>
 
-<div class="row">
-    <div class="col-md-4">
-        <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
-            <h2>Create a new account.</h2>
-            <hr />
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-floating">
-                <input asp-for="Input.FirstName" class="form-control" />
-                <label asp-for="Input.FirstName"></label>
-                <span asp-validation-for="Input.FirstName" class="text-danger"></span>
-            </div>
-            <div class="form-floating">
-                <input asp-for="Input.LastName" class="form-control" />
-                <label asp-for="Input.LastName"></label>
-                <span asp-validation-for="Input.LastName" class="text-danger"></span>
-            </div>
-            <div class="form-floating">
-                <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" />
-                <label asp-for="Input.Email"></label>
-                <span asp-validation-for="Input.Email" class="text-danger"></span>
-            </div>
-            <div class="form-floating">
-                <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" />
-                <label asp-for="Input.Password"></label>
-                <span asp-validation-for="Input.Password" class="text-danger"></span>
-            </div>
-            <div class="form-floating">
-                <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" />
-                <label asp-for="Input.ConfirmPassword"></label>
-                <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
-            </div>
-            <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
-        </form>
-    </div>
-    <div class="col-md-6 col-md-offset-2">
-        <section>
-            <h3>Use another service to register.</h3>
-            <hr />
-            @{
-                if ((Model.ExternalLogins?.Count ?? 0) == 0)
-                {
-                    <div>
-                        <p>
-                            There are no external authentication services configured. See this <a href="https://go.microsoft.com/fwlink/?LinkID=532715">
-                                article
-                                about setting up this ASP.NET application to support logging in via external services
-                            </a>.
-                        </p>
+
+   <section>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-6 col-md-6 col-sm-12 col-12 login-section">
+                    <div class=" position-sticky">
+                        <img src="~/img/painting1profile.jpg" class="img-fluid" alt="" style="height:44rem;">
                     </div>
-                }
-                else
-                {
-                    <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
-                        <div>
-                            <p>
-                                @foreach (var provider in Model.ExternalLogins)
-                                {
-                                    <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
-                                }
-                            </p>
+                </div>
+                <div class="col-lg-6 col-md-12 col-sm-12 col-12">
+                    <div class="container pt-4 text-center">
+                        <a class="navbar-brand font1 text-dark fw-bold fs-1 heading" asp-area="" asp-controller="Home" asp-action="Index"><img src="~/img/logo.png"
+                                class="me-3 mb-2" style="width: 3rem; height: 3rem;" alt="">Store To Door</a>
+                    </div>
+                    <div class="p-4 pb-1 text-center">
+                        <span class="me-5 pe-5 fs-5">Create An Account</span>
+                       <a asp-area="Identity" asp-page="/Account/Login" asp-route-returnUrl="@Model.ReturnUrl" class="text-decoration-none ms-5 ps-1"><span class="text-dark">or</span>
+                            Login</a>
+                    </div>
+                <form asp-route-returnUrl="@Model.ReturnUrl" method="post">
+                    <div class="container d-flex justify-content-center" style="width: fit-content;">
+                        <div class="row ms-3 py-2">
+                            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                            <div class="col-lg-6 col-md-6 col-sm-6 col-6">
+                                <label asp-for="Input.FirstName" for="name" class="form-label">First name</label>
+                                <input asp-for="Input.FirstName" type="text" class="form-control" id="name">
+                                <span asp-validation-for="Input.FirstName" class="text-danger"></span>
+                            </div>
+                            <div class="col-lg-6 col-md-6 col-sm-6 col-6">
+                                <label  asp-for="Input.LastName"  for="name" class="form-label">Last name</label>
+                                <input asp-for="Input.LastName" type="text" class="form-control" id="name">
+                                <span asp-validation-for="Input.LastName" class="text-danger"></span>
+                            </div>
+                            <div>
+                                <div class="row py-2">
+                                    <div>
+                                        <label asp-for="Input.Email" for="inputEmail" class="form-label" >Email</label>
+                                        <input asp-for="Input.Email" type="email" class="form-control" id="inputEmail" autocomplete="username" aria-required="true" >
+                                        <span asp-validation-for="Input.Email" class="text-danger"></span>
+                                    </div>
+                                </div>
+                                <div class="row py-2">
+                                    <div>
+                                        <label asp-for="Input.Password" for="inputPassword" class="form-label">Password</label>
+                                        <input asp-for="Input.Password" type="password" class="form-control" id="inputPassword" autocomplete="new-password" aria-required="true" >
+                                        <span asp-validation-for="Input.Password" class="text-danger"></span>
+                                    </div>
+                                </div>
+                                <div class="row py-2">
+                                    <div>
+                                        <label asp-for="Input.ConfirmPassword" for="inputPassword" class="form-label">Confirm Password</label>
+                                        <input  asp-for="Input.ConfirmPassword" type="password" class="form-control" id="inputPassword" autocomplete="new-password" aria-required="true" >
+                                        <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
+                                    </div>
+                                </div>
+                                <div class="row py-2">
+                                    <div class="mb-3">
+                                        <label class="mb-2" for="specificSizeSelect">Account type</label>
+                                        <select class="form-select" id="specificSizeSelect">
+                                          <option selected>Choose...</option>
+                                          <option value="1">User</option>
+                                          <option value="1">Artist</option>
+                                        </select>
+                                      </div>
+                                </div>                        
+                                <div class="d-grid gap-2 col-6 ms-auto me-auto pt-4 pb-5 ">
+                                    <button id="registerSubmit" type="submit" class="btn btn-primary rounded-pill shadow-none btn-primary">Log in</button>
+                                </div>
+                            </div>
                         </div>
-                    </form>
-                }
-            }
-        </section>
-    </div>
-</div>
+                    </div>
+                </form>
+                </div>
+            </div>
+        </div>
+    </section>
 
 @section Scripts {
 <partial name="_ValidationScriptsPartial" />
