--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -11,13 +11,15 @@
         <li class="nav-item">
             <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">@User.Identity?.Name!</a>
         </li>
-        <li class="nav-item">
-            <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-             <!--  <a class="btn btn-outline-danger ms-4 me-1 px-5 mb-2">Logout</a> -->
-             <button type="submit" class="nav-link btn btn-outline-danger btn-link">Logout</button> 
+        <li><a class="dropdown-item drop2" asp-controller="home" asp-action="Order">Orders</a></li>
+        <li><a class="dropdown-item drop2" asp-controller="home" asp-action="Wishlist">Wishlist</a></li>
+        <li><a class="dropdown-item drop2" asp-controller="home" asp-action="ContactUs">Contact Us</a></li>
+         <li class="nav-item">
+            <form class="form-inline text-center" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
+                <button type="submit" class="ms-3 my-2 nav-link btn btn-outline-danger btn-link text-dark">Logout</button>
             </form>
         </li>
-    } 
+    }
     else
     {
         <!-- <li class="nav-item">
@@ -26,12 +28,12 @@
          <li class="nav-item">
              <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Login">Login</a>
          </li>-->
-         
+
         <li class="ms-3 font2 fs-5 pt-2">WELCOME!</li>
         <li class="ms-3 mb-2">To access account and manage order</li>
-         <form class="d-flex">
-        <a asp-area="Identity" asp-page="/Account/Register" class="btn btn-outline-danger ms-4 me-1 px-3 mb-2">Signup</a>
-        <a asp-area="Identity" asp-page="/Account/login" class="btn btn-outline-danger me-4 ms-1 px-3 mb-2">Login</a>
+        <form class="d-flex">
+            <a asp-area="Identity" asp-page="/Account/Register" class="btn btn-outline-danger ms-4 me-1 px-3 mb-2">Signup</a>
+            <a asp-area="Identity" asp-page="/Account/login" class="btn btn-outline-danger me-4 ms-1 px-3 mb-2">Login</a>
         </form>
     }
 </ul>
