added new images

--- a/Views/Home/Wishlist.cshtml
+++ b/Views/Home/Wishlist.cshtml
@@ -60,7 +60,7 @@
         </span>
       </div>
       <div class="row">
-        <div class="col-12 col-sm-6 col-md-3 col-lg-3">
+        <div class="col-sm-12 col-md-4 col-lg-3 col-12">
           <div class="card  shadow p-3" style="max-width: 18rem;">
             <div class="card-header">
                <button type="button" class="btn-close shadow-none"></button>
@@ -78,15 +78,50 @@
             </div>
           </div>
         </div>
-        <div class="col-12 col-sm-6 col-md-3 col-lg-3">
+         <div class="col-sm-12 col-md-4 col-lg-3 col-12">
           <div class="card  shadow p-3" style="max-width: 18rem;">
             <div class="card-header">
                <button type="button" class="btn-close shadow-none"></button>
             </div>
             <div class="card-body">
               <figure class="figure">
-                <a> <img src="~/img/sketches.jpg" class="figure-img img-fluid rounded" alt="..."></a>
+                <a> <img src="~/img/sketch1.jpg" class="figure-img img-fluid rounded" alt="..."></a>
                 <figcaption class="figure-caption text-start">Sketch<span class="float-end"> Rs 500</span>
+                </figcaption>
+              </figure>
+              <div class="card-footer pt-4 text-center">
+                <a  asp-controller="home" asp-action="Cart" class="border-0 bg-pink-orange text-white  mx-2 px-3 py-2 font2 rounded text-decoration-none" >Add to cart</a>
+              </div>
+            </div>
+          </div>
+        </div>
+         <div class="col-sm-12 col-md-4 col-lg-3 col-12">
+          <div class="card  shadow p-3" style="max-width: 18rem;">
+            <div class="card-header">
+               <button type="button" class="btn-close shadow-none"></button>
+            </div>
+            <div class="card-body">
+              <figure class="figure">
+                <a> <img src="~/img/painting3.jpg" class="figure-img img-fluid rounded" alt="..."></a>
+                <figcaption class="figure-caption text-start">Painting<span class="float-end"> Rs 700</span>
+                </figcaption>
+              </figure>
+              <div class="card-footer pt-4 text-center">
+                <a  asp-controller="home" asp-action="Cart" class="border-0 bg-pink-orange text-white  mx-2 px-3 py-2 font2 rounded text-decoration-none" >Add to cart</a>
+              </div>
+            </div>
+          </div>
+        </div>
+       
+         <div class="col-sm-12 col-md-4 col-lg-3 col-12">
+          <div class="card  shadow p-3" style="max-width: 18rem;">
+            <div class="card-header">
+               <button type="button" class="btn-close shadow-none"></button>
+            </div>
+            <div class="card-body">
+              <figure class="figure">
+                <a> <img src="~/img/craft.jpg" class="figure-img img-fluid rounded" alt="..."></a>
+                <figcaption class="figure-caption text-start">Craft<span class="float-end"> Rs 600</span>
                 </figcaption>
               </figure>
               <div class="card-footer pt-4 text-center">
