--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -41,7 +41,7 @@
                                 <input class="form-check-input" asp-for="Input.RememberMe" />
                                 @Html.DisplayNameFor(m => m.Input.RememberMe)
                             </label>
-                            <a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
+                            <a id="forgot-password" class="float-end text-decoration-none" asp-page="./ForgotPassword">Forgot your password?</a>
                         </div>
                         <div class="d-grid gap-2 col-6 ms-auto me-auto pt-4">
                             <button id="login-submit" type="submit" class="btn btn-primary rounded-pill shadow-none btn-primary">Log in</button>
