--- a/Views/Home/Shopbyartist.cshtml
+++ b/Views/Home/Shopbyartist.cshtml
@@ -51,7 +51,7 @@
             <div class="nav-item search-box rounded-pill bg-dark ms-3">
                 <input type="text" class="search-txt float-start fs-6 text-white" placeholder="search here..">
                 <a class="nav-link font2 search-btn d-flex justify-content-center align-items-center rounded-circle text-white"
-                   href="#"><i class="fas fa-search"></i></a>
+                   href="#"><img style="width:1rem; height:1rem;" src="~/img/search.png"></a>
             </div>
         </div>
     </div>
@@ -86,7 +86,7 @@
                     <div class="card-footer py-3 bg-body">
                         <a asp-controller="home" asp-action="Artist1"
                            class="bg-pink-orange text-white px-3 py-2 my-3 mx-2 rounded text-decoration-none font2">
-                            <i class="fas fa-user"></i> View profile
+                          <img class="me-1 mb-2" style="width:1rem; height=1rem" src="~/img/user.png"> View profile
                         </a>
                     </div>
                 </div>
@@ -105,7 +105,7 @@
                     <div class="card-footer py-3 bg-body">
                         <a href="Artist2.html"
                            class="bg-pink-orange text-white px-3 py-2 my-3 mx-2 rounded text-decoration-none font2">
-                            <i class="fas fa-user"></i> View profile
+                           <img class="me-1 mb-2" style="width:1rem; height=1rem" src="~/img/user.png"> View profile
                         </a>
                     </div>
                 </div>
@@ -121,8 +121,8 @@
             </div>
             <div class="card-footer py-3 bg-body">
               <a href="Artist3.html"
-                class="bg-pink-orange text-white px-3 py-2 my-3 mx-2 rounded text-decoration-none font2"><i
-                  class="fas fa-user"></i> View profile</a>
+                class="bg-pink-orange text-white px-3 py-2 my-3 mx-2 rounded text-decoration-none font2">
+                <img class="me-1 mb-2" style="width:1rem; height=1rem" src="~/img/user.png"> View profile</a>
             </div>
           </div>
         </div>
@@ -138,7 +138,7 @@
                     </div>
                     <div class="card-footer py-3 bg-body">
                         <a class="bg-pink-orange text-white px-3 py-2 my-3 mx-2 rounded text-decoration-none font2">
-                            <i class="fas fa-user"></i>View profile
+                            <img class="me-1 mb-2" style="width:1rem; height=1rem" src="~/img/user.png">View profile
                         </a>
                     </div>
                 </div>
