--- a/Views/Home/Shopbyartist.cshtml
+++ b/Views/Home/Shopbyartist.cshtml
@@ -133,7 +133,7 @@
                              style="height: 150px; width: 150px;">
                         <h5 class="card-title mt-2">Craft_n_creations</h5>
                         <p class="card-text">
-                            Your Ideas & our creativity makes the perfect gift for your loved one's
+                            Your Ideas & our creativity makes the perfect gift for you and your loved one's
                         </p>
                     </div>
                     <div class="card-footer py-3 bg-body">
