--- a/Views/Home/Wishlist.cshtml
+++ b/Views/Home/Wishlist.cshtml
@@ -60,7 +60,7 @@
         </span>
       </div>
       <div class="row">
-        <div class="col-sm-12 col-md-4 col-lg-3 col-12">
+        <div class="col-sm-6 col-md-4 col-lg-3 col-12 my-2 d-flex justify-content-center">
           <div class="card  shadow p-3" style="max-width: 18rem;">
             <div class="card-header">
                <button type="button" class="btn-close shadow-none"></button>
@@ -73,12 +73,12 @@
                     400</span></figcaption>
               </figure>
               <div class="card-footer pt-4 text-center">
-                <a  asp-controller="home" asp-action="Cart" class="border-0 bg-pink-orange text-white  mx-2 px-3 py-2 font2 rounded text-decoration-none" >Add to cart</a>
+                <a  asp-controller="home" asp-action="Cart" class="btn border-0 bg-pink-orange text-white  mx-2 px-3 py-2 font2 rounded text-decoration-none" >Add to cart</a>
               </div>
             </div>
           </div>
         </div>
-         <div class="col-sm-12 col-md-4 col-lg-3 col-12">
+         <div class="col-sm-6 col-md-4 col-lg-3 col-12 my-2 d-flex justify-content-center">
           <div class="card  shadow p-3" style="max-width: 18rem;">
             <div class="card-header">
                <button type="button" class="btn-close shadow-none"></button>
@@ -90,12 +90,12 @@
                 </figcaption>
               </figure>
               <div class="card-footer pt-4 text-center">
-                <a  asp-controller="home" asp-action="Cart" class="border-0 bg-pink-orange text-white  mx-2 px-3 py-2 font2 rounded text-decoration-none" >Add to cart</a>
+                <a  asp-controller="home" asp-action="Cart" class="btn border-0 bg-pink-orange text-white  mx-2 px-3 py-2 font2 rounded text-decoration-none" >Add to cart</a>
               </div>
             </div>
           </div>
         </div>
-         <div class="col-sm-12 col-md-4 col-lg-3 col-12">
+         <div class="col-sm-6 col-md-4 col-lg-3 col-12 my-2 d-flex justify-content-center">
           <div class="card  shadow p-3" style="max-width: 18rem;">
             <div class="card-header">
                <button type="button" class="btn-close shadow-none"></button>
@@ -107,13 +107,12 @@
                 </figcaption>
               </figure>
               <div class="card-footer pt-4 text-center">
-                <a  asp-controller="home" asp-action="Cart" class="border-0 bg-pink-orange text-white  mx-2 px-3 py-2 font2 rounded text-decoration-none" >Add to cart</a>
+                <a  asp-controller="home" asp-action="Cart" class="btn border-0 bg-pink-orange text-white  mx-2 px-3 py-2 font2 rounded text-decoration-none" >Add to cart</a>
               </div>
             </div>
           </div>
-        </div>
-       
-         <div class="col-sm-12 col-md-4 col-lg-3 col-12">
+        </div> 
+         <div class="col-sm-6 col-md-4 col-lg-3 col-12 my-2 d-flex justify-content-center">
           <div class="card  shadow p-3" style="max-width: 18rem;">
             <div class="card-header">
                <button type="button" class="btn-close shadow-none"></button>
@@ -125,7 +124,7 @@
                 </figcaption>
               </figure>
               <div class="card-footer pt-4 text-center">
-                <a  asp-controller="home" asp-action="Cart" class="border-0 bg-pink-orange text-white  mx-2 px-3 py-2 font2 rounded text-decoration-none" >Add to cart</a>
+                <a  asp-controller="home" asp-action="Cart" class="btn border-0 bg-pink-orange text-white  mx-2 px-3 py-2 font2 rounded text-decoration-none" >Add to cart</a>
               </div>
             </div>
           </div>
