--- a/Views/Home/CustomArt.cshtml
+++ b/Views/Home/CustomArt.cshtml
@@ -40,7 +40,7 @@
                                 <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                             </div>
                         </div>
-                        <div class="d-grid gap-2 col-6 ms-auto me-auto pt-3">
+                        <div class="d-grid gap-2 col-sm-8 ms-auto me-auto pt-3">
                             <a href="" class="btn btn-primary rounded-pill shadow-none">Send</a>
                         </div>
                     </div>
